--- a/package.json
+++ b/package.json
@@ -45,5 +45,7 @@
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.6.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "slick-carousel": "^1.5.9"
+  }
 }
