--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^6.1.2",
     "browser-sync": "^2.10.0",
     "browserify": "^12.0.1",
+    "css-mqpacker": "^4.0.0",
     "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-changed": "^1.3.0",
@@ -47,6 +48,7 @@
   },
   "dependencies": {
     "jquery": "^2.1.4",
+    "perfect-scrollbar": "^0.6.8",
     "slick-carousel": "^1.5.9"
   }
 }
